--- a/.github/workflows/pull_docker_image.yaml
+++ b/.github/workflows/pull_docker_image.yaml
@@ -17,15 +17,15 @@ jobs:
           IMAGE_NAME="${{ github.event.inputs.IMAGE_NAME }}"
           docker pull "$IMAGE_NAME"
 
-      - name: Save Docker image as tar
+      - name: Save and compress Docker image
         run: |
           IMAGE_NAME="${{ github.event.inputs.IMAGE_NAME }}"
           IMAGE_TAG=$(echo "$IMAGE_NAME" | sed 's/[/:]/_/g')
-          docker save -o "${IMAGE_TAG}.tar" "$IMAGE_NAME"
+          docker save "$IMAGE_NAME" | gzip > "${IMAGE_TAG}.tar.gz"
 
-      - name: Upload tar file as artifact
+      - name: Upload compressed tar file as artifact
         uses: actions/upload-artifact@v3
         with:
           name: docker-image
           path: |
-            *.tar
+            *.tar.gz
